<resources>
    <string name="app_name">SurMarket</string>
    <string name="FRGLogin_Title">Iniciar Sesion</string>
    <string name="FRGLogin_TXVUserName">Nombre de usuario</string>
    <string name="FRGLogin_ETXUserName">Ingresa tu nombre de usuario</string>
    <string name="FRGLogin_TXVPassword">Contraseña</string>
    <string name="FRGLogin_ETXPassword">Ingrese su contraseña</string>
    <string name="FRLogin_TXVRecoverPassword">Recuperar contraseña</string>
    <string name="BTNLogin_BTNLogin">Inciar Sesion</string>
    <string name="BTNLogin_BTNRegister">Registrate aqui</string>
    <string name="loginWelcome">Bienvenido a Sur Market</string>
    <string name="loginError">Usuario o contraseña invalidos</string>
    <string name="userEmpty">Ingrese su nombre de usuario</string>
    <string name="passwordEmpty">Ingrese su contraseña</string>
    <string name="labelLoginFragment">Login</string>
</resources>